--- a/src/Components/SearchPage.scss
+++ b/src/Components/SearchPage.scss
@@ -18,19 +18,26 @@
             .e{ color: #F42E31 ;}
         }
     .searchBox{
-        width: 500px;
-        height: 30px;
+        width: 550px;
+        height: 40px;
         padding-left: 20px;
         font-size: 18px;
         border-radius: 50px 0px 0px 50px ;
         border-right: 0px;
+        outline: none;
+        border: none;
+      box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     }
     .search{
          width: 100px;
          font-size: 17px;
-        height: 36px;
+        height: 41px;
           border-left: 0px;
+          cursor: pointer;
          border-radius: 0px 50px 50px 0px ;
+          outline: none;
+        border: none;
+      box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     }
 
    
@@ -38,11 +45,11 @@
 .sortBox{
     display: flex;
   
-    width: 95%;
+    width: 73%;
     gap: 10px;
     margin: auto;
     // border: 1px solid;
-      margin-top: 20px;
+      margin-top: 40px;
 
     button{
         min-width: 100px;
@@ -50,15 +57,32 @@
 }
  .search-result{
         text-align: left;
-        margin-top: 30px;
+        display: flex;
+        flex-direction: column;
+        gap: 0px;
 
         .detailed-result{
-            border: 1px solid gray;
-            width: 95%;
+            // border-bottom: 1px solid gray;
+              width: 73%;
             margin: auto;
             margin-top: 10px;
-            padding: 10px;
-            border-radius: 5px;
+            box-sizing: border-box;
+            padding: 20px;
+            background-image: linear-gradient( white 90%, rgba(68, 68, 68, 0.041));
+            
+            .titleBox{
+                margin-top: 10px;
+                margin-bottom: 10px;
+            }
+            .title{
+                font-size: 25px;
+                text-decoration: none;
+                color: #660099;
+                font-family: sans-serif;
+            }
+            .des{
+                width: 700px;
+            }
         }
     }
 .text-left{
